# 22_PC_GDPS_MAIN

./: CMakeLists.txt  CMakeSettings.json  FutureAnims.cpp  LoadLibrary.cpp  Patches.cpp  README.md  verInf.rc
Patches/: DefaultSongBypass.cpp  EditorScrollOut.cpp  InstantMirrorPortal.cpp  MusicSyncCorrection.cpp  ObjRotationHack.cpp  PlaytestZoomBypass.cpp  SmoothEditorTrail.cpp  ZoomInBypass.cpp  shouldExitHackedLevelBypass.cpp
src/: 22_PC_GDPS_MAIN.cpp  22_PC_GDPS_MAIN.h  EventLevelPage.cpp  EventLevelPage.hpp  GameLayers.cpp  GameLayers.hpp  Gameplay.cpp  Gameplay.hpp  LevelAreaInnerLayer.cpp  LevelAreaInnerLayer.hpp  LevelAreaLayer.cpp  LevelAreaLayer.hpp  LevelEditor.cpp  LevelEditor.hpp  ObjectSetupPopups.cpp  ObjectSetupPopups.hpp  Objects.cpp  Objects.hpp  OtherLayers.cpp  OtherLayers.hpp  customLayerxd.cpp  customLayerxd.h
